Fixed ParseRoutes and buildPrev for "Required" Express Router Modules
